--- a/TagManager/VideoManager/Components/Pages/NewExplorer.razor
+++ b/TagManager/VideoManager/Components/Pages/NewExplorer.razor
@@ -1,14 +1,32 @@
 ﻿@page "/nexplorer"
 @using VideoManager.Models
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedSessionStorage ProtectedSessionStore
 @inject IPizzaService PizzaService
 @inject ITagService TagService
 @inject IPizzaTagService PizzaTagService
 @rendermode InteractiveServer
 
-<section>
 
-	<h3>Pizzas!</h3>
+@if (!isConnected)
+{
+    <section>
+
+    <h3>Pizzas!</h3>
+    
+    <h2>Loading Realm...</h2>
+
+    </section>
+}
+else
+{
+
+    <section>
+
+    <h3>Pizzas!</h3>
+    
+    <h2>Realm: @selectedRealm</h2>
 
 	<p> Block 1: Search bar & preview </p>
 
@@ -53,12 +71,10 @@
         }
 
     </div>
-    
 
+    </section>
 
-</section>
-
-<section>
+    <section>
 
 	<p> Block 3: Search results listed </p>
 
@@ -66,19 +82,19 @@
 
     @if (todaysPizzas == null)
     {
-        <p role="status">Pizzas are loading...</p>
+        <p role="status">No pizzas found...</p>
     }
     else
     {
 
         <Grid TItem="Pizza"
-              AllowRowClick="true"
-              AllowSorting="true"
-              Class="table table-hover"
-              Data="todaysPizzas"
-              HeaderRowCssClass="bg-primary text-white border-bottom-0"
-              OnRowClick="OnRowClick"
-              Responsive="true">
+                AllowRowClick="true"
+                AllowSorting="true"
+                Class="table table-hover"
+                Data="todaysPizzas"
+                HeaderRowCssClass="bg-primary text-white border-bottom-0"
+                OnRowClick="OnRowClick"
+                Responsive="true">
 
             <GridColumns>
                 <GridColumn TItem="Pizza" HeaderText="Name">
@@ -93,7 +109,9 @@
         </Grid>
     }
 
-</section>
+    </section>
+}
+
 
 @code {
 
@@ -111,6 +129,9 @@
     private Button goSearchButton = default!;
     private Button clearSearchButton = default!;
 
+    private string? selectedRealm = default!;
+    private bool isConnected;
+
     protected override void OnInitialized()
     {
         editContext = new EditContext(currentTag);
@@ -123,6 +144,22 @@
         availableTags = await TagService.GetTagList();
         todaysPizzas = await PizzaService.GetPizzaList(currentSearchTagList);
         await base.OnInitializedAsync();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            isConnected = true;
+            await LoadRealmAsync();
+            StateHasChanged();
+        }
+    }
+
+    private async Task LoadRealmAsync()
+    {
+        var result = await ProtectedSessionStore.GetAsync<string>("selectedRealm");
+        selectedRealm = result.Success ? result.Value : default!;
     }
 
     @*
