--- a/TagManager/VideoManager/Components/Pages/TagManager.razor
+++ b/TagManager/VideoManager/Components/Pages/TagManager.razor
@@ -1,73 +1,95 @@
 ﻿@page "/tagmanager"
 @using VideoManager.Models
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedSessionStorage ProtectedSessionStore
 @inject IPizzaService PizzaService
 @inject ITagService TagService
 @inject IPizzaTagService PizzaTagService
 @rendermode InteractiveServer
 
-<section>
+
+@if (!isConnected)
+{
+    <section>
 
     <h3>Pizzas!</h3>
+    
+    <h2>Loading Realm...</h2>
 
-    <EditForm EditContext="@editContext">
+    </section>
+}
+else
+{
+    
+    <section>
 
-        <DataAnnotationsValidator />
-        <ValidationSummary />
+        <h3>Pizzas!</h3>
 
-        <div class="mb-3">
-            <label class="form-label">Edible Tag:</label>
-            <InputText @bind-Value="currentTag.Value" Placeholder="Enter tag" />
-            @*<InputText Value="@currentTag.Value" ValueExpression="() => currentTag.Value" Placeholder="Enter tag" />*@
-            @*<ValidationMessage For="@(() => currentTag.Value)" />*@
-        </div>
+        <h2>Realm: @selectedRealm</h2>
 
-        @if (editContext.Validate())
+        <EditForm EditContext="@editContext">
+
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+
+            <div class="mb-3">
+                <label class="form-label">Edible Tag:</label>
+                <InputText @bind-Value="currentTag.Value" Placeholder="Enter tag" />
+                @*<InputText Value="@currentTag.Value" ValueExpression="() => currentTag.Value" Placeholder="Enter tag" />*@
+                @*<ValidationMessage For="@(() => currentTag.Value)" />*@
+            </div>
+
+            @if (editContext.Validate())
+            {
+                <Button @ref="addButton" Color="ButtonColor.Primary" @onclick="HandleButtonAddTagClick"> Add </Button>
+                <Button @ref="deleteButton" Color="ButtonColor.Danger" @onclick="HandleButtonDeleteTagClick"> Delete </Button>
+            }
+            else
+            {
+                <Button @ref="addButton" Color="ButtonColor.Secondary" Disabled="true"> Add </Button>
+                <Button @ref="deleteButton" Color="ButtonColor.Secondary" Disabled="true"> Delete </Button>
+            }
+
+        </EditForm>
+
+    </section>
+
+
+    <section>
+
+        <p> Tag Table </p>
+
+        @if (availableTags == null)
         {
-            <Button @ref="addButton" Color="ButtonColor.Primary" @onclick="HandleButtonAddTagClick"> Add </Button>
-            <Button @ref="deleteButton" Color="ButtonColor.Danger" @onclick="HandleButtonDeleteTagClick"> Delete </Button>
+            <p role="status">Tags are loading...</p>
         }
         else
         {
-            <Button @ref="addButton" Color="ButtonColor.Secondary" Disabled="true"> Add </Button>
-            <Button @ref="deleteButton" Color="ButtonColor.Secondary" Disabled="true"> Delete </Button>
+
+            <Grid TItem="ShortTag"
+                  AllowRowClick="true"
+                  AllowSorting="true"
+                  Class="table table-hover"
+                  Data="availableTags"
+                  HeaderRowCssClass="bg-primary text-white border-bottom-0"
+                  OnRowClick="OnRowClick"
+                  Responsive="true">
+
+                <GridColumns>
+                    <GridColumn TItem="ShortTag" HeaderText="Tag Name">
+                        @context.Value
+                    </GridColumn>
+                </GridColumns>
+
+            </Grid>
         }
 
-    </EditForm>
+    </section>    
+}
 
-</section>
 
 
-<section>
-
-    <p> Tag Table </p>
-
-    @if (availableTags == null)
-    {
-        <p role="status">Tags are loading...</p>
-    }
-    else
-    {
-
-        <Grid TItem="ShortTag"
-              AllowRowClick="true"
-              AllowSorting="true"
-              Class="table table-hover"
-              Data="availableTags"
-              HeaderRowCssClass="bg-primary text-white border-bottom-0"
-              OnRowClick="OnRowClick"
-              Responsive="true">
-
-            <GridColumns>
-                <GridColumn TItem="ShortTag" HeaderText="Tag Name">
-                    @context.Value
-                </GridColumn>
-            </GridColumns>
-
-        </Grid>
-    }
-
-</section>
 
 @code {
 
@@ -78,6 +100,9 @@
 
     private Button addButton = default!;
     private Button deleteButton = default!;
+
+    private string? selectedRealm = default!;
+    private bool isConnected;
 
     protected override void OnInitialized()
     {
@@ -97,6 +122,22 @@
         }
 
         await base.OnInitializedAsync();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            isConnected = true;
+            await LoadRealmAsync();
+            StateHasChanged();
+        }
+    }
+
+    private async Task LoadRealmAsync()
+    {
+        var result = await ProtectedSessionStore.GetAsync<string>("selectedRealm");
+        selectedRealm = result.Success ? result.Value : default!;
     }
 
     private async Task OnRowClick(GridRowEventArgs<ShortTag> args)
@@ -125,7 +166,7 @@
 
     private async Task HandleButtonDeleteTagClick()
     {
-        addButton.ShowLoading("Deleting...");
+        deleteButton.ShowLoading("Deleting...");
 
         // await Task.Delay(1000);
         await TagService.DeleteTag(currentTag.Value);
@@ -139,7 +180,7 @@
             availableTags.Add(newTag);
         }
 
-        addButton.HideLoading();
+        deleteButton.HideLoading();
     }
 
 }
